[build-system]
build-backend = "setuptools.build_meta"
# setuptools needs to be less than 72.0.0 to because of an issue with click-default-group==1.2.2 -> https://stackoverflow.com/questions/78806100/no-module-named-setuptools-command-test
requires = ["setuptools>=54.0.0,<72.0.0", "wheel", "pip>=21.0.0"]

[tool.black]
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tmp
'''
include = '\.pyi?$'

[tool.isort]
indent = '    '
known_future_library = ['__future__', 'datahub.utilities._markupsafe_compat', 'datahub_provider._airflow_compat']
profile = 'black'
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.pyright]
extraPaths = ['tests']